--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,8 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/mainDrawerToggle"
+                    android:src="@drawable/btn_actionbar_nav"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:padding="16dp" />
@@ -25,7 +27,6 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
                     android:gravity="center_vertical"
                     android:text="Alime"
                     android:textColor="#FFF"
