--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,10 +19,10 @@
 
                 <ImageView
                     android:id="@+id/mainDrawerToggle"
-                    android:src="@drawable/btn_actionbar_nav"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:padding="16dp" />
+                    android:padding="16dp"
+                    android:src="@drawable/btn_actionbar_nav" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -37,6 +37,8 @@
                 android:id="@+id/mainTabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 app:tabIndicatorColor="@color/colorPrimary"
                 app:tabSelectedTextColor="@color/colorPrimary"
                 app:tabTextAppearance="@style/AppTheme.TabStyle"
