--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                     android:gravity="center_vertical"
                     android:text="Alime"
                     android:textColor="#FFF"
-                    android:textSize="23sp" />
+                    android:textSize="20dp" />
             </LinearLayout>
 
             <android.support.design.widget.TabLayout
@@ -41,7 +41,6 @@
                 android:layout_marginRight="16dp"
                 app:tabIndicatorColor="@color/colorPrimary"
                 app:tabSelectedTextColor="@color/colorPrimary"
-                app:tabTextAppearance="@style/AppTheme.TabStyle"
                 app:tabTextColor="@color/notSelectedTextColor" />
         </android.support.design.widget.AppBarLayout>
 
