--- a/app/src/main/res/layout/main_mainboard.xml
+++ b/app/src/main/res/layout/main_mainboard.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/backgroundColor"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="@dimen/common_margin">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -21,31 +21,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 carta:mainText="참가 분야"
-                carta:subText="게임" />
+                carta:mainTextSize="15sp"
+                carta:subText="게임"
+                carta:subTextSize="22sp" />
 
             <kr.edcan.alime.views.CartaDoubleTextView
                 android:id="@+id/mainDashboardUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="@dimen/common_margin"
                 carta:mainText="참가자명"
-                carta:subText="김영환" />
+                carta:mainTextSize="15sp"
+                carta:subText="김영환"
+                carta:subTextSize="22sp" />
 
             <kr.edcan.alime.views.CartaDoubleTextView
                 android:id="@+id/mainDashboardCompDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="@dimen/common_margin"
                 carta:mainText="대회일"
+                carta:mainTextSize="15sp"
                 carta:subColor="@color/colorPrimary"
-                carta:subText="2016.09.05" />
+                carta:subText="2016.09.05"
+                carta:subTextSize="22sp" />
         </LinearLayout>
     </HorizontalScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/common_margin"
         android:background="@drawable/round_square_10dp"
         android:orientation="vertical"
         android:padding="30dp">
@@ -56,7 +62,9 @@
             android:layout_marginBottom="20dp"
             carta:mainColor="@color/colorPrimary"
             carta:mainText="2016 제 51회 전국기능경기대회"
-            carta:subText="58일 남음" />
+            carta:mainTextSize="15sp"
+            carta:subText="58일 남음"
+            carta:subTextSize="22sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,7 +83,7 @@
                 android:gravity="bottom"
                 android:text="09:42"
                 android:textColor="@color/colorPrimary"
-                android:textSize="65sp" />
+                android:textSize="65dp" />
 
             <kr.edcan.alime.views.CartaDoubleTextView
                 android:id="@+id/mainDashboardTimeInfo"
@@ -89,7 +97,7 @@
                 carta:mainTextSize="13dp"
                 carta:subText="게임 개발"
                 carta:subTextSize="18sp"
-                carta:textMargin="0dp"/>
+                carta:textMargin="0dp" />
         </RelativeLayout>
 
         <kr.edcan.alime.views.CartaTagView
@@ -100,5 +108,74 @@
             android:text="모의대회 시작하기"
             carta:fullMode="false"
             carta:themeColor="@android:color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <RelativeLayout
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/round_square_10dp_fullmode"
+            android:padding="16dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <kr.edcan.alime.views.CartaDoubleTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    carta:mainColor="#000"
+                    carta:mainText="경기"
+                    carta:mainTextSize="15dp"
+                    carta:subColor="#000"
+                    carta:subText="운영수칙 보기"
+                    carta:subTextSize="15dp"
+                    carta:textMargin="0dp"></kr.edcan.alime.views.CartaDoubleTextView>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/round_square_10dp"
+            android:padding="16dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <kr.edcan.alime.views.CartaDoubleTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    carta:mainColor="@color/colorPrimary"
+                    carta:mainText="경기관련"
+                    carta:mainTextSize="15dp"
+                    carta:subColor="@color/colorPrimary"
+                    carta:subText="유용한 정보"
+                    carta:subTextSize="15dp"
+                    carta:textMargin="0dp"/>
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
