--- a/app/src/main/res/layout/main_mainboard.xml
+++ b/app/src/main/res/layout/main_mainboard.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/backgroundColor"
     android:orientation="vertical"
-    android:padding="@dimen/common_margin">
+    android:padding="@dimen/common_padding">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
                 android:id="@+id/mainDashboardUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/common_margin"
+                android:layout_marginLeft="@dimen/common_padding"
                 carta:mainText="참가자명"
                 carta:mainTextSize="15sp"
                 carta:subText="김영환"
@@ -38,7 +38,7 @@
                 android:id="@+id/mainDashboardCompDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/common_margin"
+                android:layout_marginLeft="@dimen/common_padding"
                 carta:mainText="대회일"
                 carta:mainTextSize="15sp"
                 carta:subColor="@color/colorPrimary"
@@ -50,7 +50,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_margin"
+        android:layout_marginTop="@dimen/common_padding"
         android:background="@drawable/round_square_10dp"
         android:orientation="vertical"
         android:padding="30dp">
