--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="stroke_width">1dp</dimen>
-    <dimen name="common_margin">20dp</dimen>
+    <dimen name="common_padding">20dp</dimen>
 </resources>
