--- a/app/src/main/res/layout/main_common_listview_content.xml
+++ b/app/src/main/res/layout/main_common_listview_content.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:carta="http://schemas.android.com/apk/res-auto"
-    android:padding="@dimen/common_padding"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/backgroundColor"
-    android:orientation="vertical">
+<layout>
 
-    <kr.edcan.alime.views.CartaDoubleTextView
-        android:id="@+id/commonDoubleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        carta:mainColor="@android:color/white"
-        carta:mainText="경기에 대해서 질문 하나 dddd드립니다"
-        carta:mainTextSize="18dp"
-        carta:subColor="@color/notSelectedTextColor"
-        carta:subText="2016.08.09 - 구창림"
-        carta:textMargin="5dp"
-        carta:subTextSize="15dp"/>
-</RelativeLayout>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:carta="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/backgroundColor"
+        android:orientation="vertical"
+        android:padding="@dimen/common_padding">
+
+        <kr.edcan.alime.views.CartaDoubleTextView
+            android:id="@+id/commonDoubleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            carta:mainColor="@android:color/white"
+            carta:mainText="경기에 대해서 질문 하나 dddd드립니다"
+            carta:mainTextSize="18dp"
+            carta:subColor="@color/notSelectedTextColor"
+            carta:subText="2016.08.09 - 구창림"
+            carta:subTextSize="15dp"
+            carta:textMargin="5dp" />
+    </RelativeLayout>
+</layout>
