--- a/app/src/main/res/layout/main_common_listview_content.xml
+++ b/app/src/main/res/layout/main_common_listview_content.xml
@@ -13,9 +13,11 @@
             android:id="@+id/commonDoubleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            carta:mainBold="true"
             carta:mainColor="@android:color/white"
             carta:mainText="경기에 대해서 질문 하나 dddd드립니다"
             carta:mainTextSize="14dp"
+            carta:subBold="false"
             carta:subColor="@color/notSelectedTextColor"
             carta:subText="2016.08.09 - 구창림"
             carta:subTextSize="12dp"
