--- a/app/src/main/res/layout/main_notice.xml
+++ b/app/src/main/res/layout/main_notice.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/backgroundColor"
         android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/mainNoticeListView"
+        <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
+            android:id="@+id/mainNoticeSRLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:srl_direction="bottom">
+
+            <ListView
+                android:id="@+id/mainNoticeListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
     </LinearLayout>
 </layout>
