--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
-                        android:text="Alime"
-                        android:textColor="#FFF"
+                        android:text="@string/app_name"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="20dp" />
                 </LinearLayout>
 
@@ -60,9 +60,9 @@
         <LinearLayout
             android:id="@+id/mainDrawerLayout"
             android:layout_width="280dp"
-            android:background="@color/backgroundColor"
-            android:layout_gravity="start"
             android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/backgroundColor"
             android:orientation="vertical"></LinearLayout>
     </android.support.v4.widget.DrawerLayout>
 </layout>
