--- a/app/src/main/res/layout/main_mainboard.xml
+++ b/app/src/main/res/layout/main_mainboard.xml
@@ -1,5 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:carta="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,6 +23,7 @@
                     android:layout_height="wrap_content"
                     carta:mainText="참가 분야"
                     carta:mainTextSize="15sp"
+                    carta:subColor="@color/colorPrimary"
                     carta:subText="게임"
                     carta:subTextSize="22sp" />
 
@@ -32,6 +34,7 @@
                     android:layout_marginLeft="@dimen/common_padding"
                     carta:mainText="참가자명"
                     carta:mainTextSize="15sp"
+                    carta:subColor="@color/colorPrimary"
                     carta:subText="김영환"
                     carta:subTextSize="22sp" />
 
@@ -63,13 +66,14 @@
                 carta:mainColor="@color/colorPrimary"
                 carta:mainText="2016 제 51회 전국기능경기대회"
                 carta:mainTextSize="15sp"
+                carta:subColor="@color/notSelectedTextColor"
                 carta:subText="58일 남음"
                 carta:subTextSize="22sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/notSelectedTextColor" />
+                android:layout_height="1dp"
+                android:background="#44565657" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -95,6 +99,7 @@
                     android:layout_toRightOf="@id/mainDashboardTime"
                     carta:mainText="AM"
                     carta:mainTextSize="13dp"
+                    carta:subColor="@color/notSelectedTextColor"
                     carta:subText="게임 개발"
                     carta:subTextSize="18sp"
                     carta:textMargin="0dp" />
@@ -107,7 +112,7 @@
                 android:layout_marginTop="20dp"
                 android:text="모의대회 시작하기"
                 carta:fullMode="false"
-                carta:themeColor="@android:color/white" />
+                carta:themeColor="@color/colorPrimary" />
         </LinearLayout>
 
         <LinearLayout
@@ -141,10 +146,10 @@
                     <kr.edcan.alime.views.CartaDoubleTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        carta:mainColor="#000"
+                        carta:mainColor="#FFF"
                         carta:mainText="경기"
                         carta:mainTextSize="13dp"
-                        carta:subColor="#000"
+                        carta:subColor="#FFF"
                         carta:subText="운영수칙 보기"
                         carta:subTextSize="13dp"
                         carta:textMargin="0dp"></kr.edcan.alime.views.CartaDoubleTextView>
