--- a/app/src/main/res/layout/activity_notice_view.xml
+++ b/app/src/main/res/layout/activity_notice_view.xml
@@ -11,8 +11,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:title="질문 보기"
-            android:titleTextColor="@color/colorPrimary" />
+            app:title="질문 보기"
+            app:titleTextColor="@color/colorPrimary" />
 
         <kr.edcan.alime.views.CartaDoubleTextView
             android:id="@+id/questionTitle"
