--- a/app/src/main/res/layout/main_prize.xml
+++ b/app/src/main/res/layout/main_prize.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:carta="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +24,6 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/mainPrizeRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 </layout>
