--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,8 @@
                     android:layout_height="?attr/actionBarSize"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/mainDrawerToggle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:padding="16dp"
-                        android:src="@drawable/btn_actionbar_nav" />
-
                     <TextView
+                        android:layout_marginLeft="16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
