--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,21 +16,11 @@
                 android:layout_height="wrap_content"
                 android:background="@color/backgroundColor">
 
-                <LinearLayout
-                    android:id="@+id/mainToolbar"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_marginLeft="16dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:text="@string/app_name"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="20dp" />
-                </LinearLayout>
+                    app:titleTextColor="@color/colorPrimary"
+                    android:layout_height="?attr/actionBarSize" />
 
                 <android.support.design.widget.TabLayout
                     android:id="@+id/mainTabLayout"
