--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -62,7 +62,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="이름 입력"
-                    android:inputType="textPassword"
                     android:singleLine="true"
                     android:textSize="14dp" />
 
@@ -70,6 +69,8 @@
                     android:id="@+id/registerSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:layout_marginTop="10dp" />
             </LinearLayout>
 
